# redzone

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  heap_overflow  valid
.github/workflows/: ci.yml
bench/: alloc_churn.c  compute.c  gather.c
bench/race/: race_atomic_contended.c  race_contended.c  race_serial.c
cmake/: Redzone.cmake
docs/: benchmarks.md  build-integration.md  caching.md  ci-integration.md  real-world-validation.md  tutorial.md
docs/design/: data-race-detection.md  inline-fastpath.md  interposition.md  selective-instrumentation.md  shadow-memory.md
examples/: aligned_overflow.c  aligned_valid.c  big_valid.c  calloc_overflow.c  cpp_aligned_new_overflow.cpp  cpp_aligned_new_valid.cpp  cpp_delete_uaf.cpp  cpp_new_overflow.cpp  cpp_new_valid.cpp  double_free.c  extern_global_overflow.c  extern_global_valid.c  global_overflow.c  heap_overflow.c  indirect_malloc.c  invalid_free.c  memcpy_overflow.c  memcpy_valid.c  memory_leak.c  memset_overflow.c  multi_leak.c  off_by_one_read.c  printf_valid.c  race_atomic_clean.c  race_atomic_counter_clean.c  race_clean.c  race_condvar_clean.c  race_data_race.c  race_rwlock_clean.c  race_rwlock_unlocked.c  race_trylock_clean.c  realloc_grow.c  sample.c  snprintf_overflow.c  sprintf_overflow.c  stack_inbounds_then_oob.c  stack_overflow.c  str_valid.c  strcat_overflow.c  strcpy_overflow.c  (+9 more)
integration/cmake-example/: CMakeLists.txt  main.c
runtime/: redzone_interpose.c  redzone_race.c  redzone_race.h  redzone_race_main.c  redzone_race_rt.c  redzone_race_rt.h  redzone_rt.c  redzone_rt.h
scripts/: bench.sh  bench_race.sh  demo.sh  redzone  test.sh  test_ccache.sh  test_cross_tu.sh  test_determinism.sh  test_diff_asan.sh  test_formats.sh  test_ignorelist.sh  test_interpose.sh  test_optout.sh  test_race_e2e.sh  test_race_engine.sh  test_race_runtime.sh  test_race_tsan.sh  test_reports.sh  test_sccache.sh
src/: RedzonePass.cpp
tests/: race_engine_test.c  race_runtime_test.c  race_tsan_test.c
(+7 files in other folders)
